manifests/redis_cluster_configMap_1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
