manifests/redis_cluster_service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
  namespace: redis
  annotations:
   prometheus.io/scrape: "true"
   prometheus.io/port: "9121"
    
    
spec:
  ports:
    - name: redis-port
      port: 6379
    - name: prom
      port: 9121
  clusterIP: None
  selector:
    app: redis
    appCluster: redis-cluster
