manifests/redis_depolyment_1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
  namespace: redis
spec:
  ports:
    - name: redis-port
      port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      serviceAccountName: redis
      containers:
      - name: redis
        image: registry.hub.docker.com/bitnami/redis:latest
        command:
          - /opt/bitnami/scripts/redis/run.sh
        resources:
          limits:
            memory: "512Mi"
            cpu: "300m"
        ports:
          - protocol: "TCP"
            name:  redis
            containerPort: 6379
        volumeMounts:
          - name: redis-data
            mountPath: /bitnami/redis/data

      volumes:
      - name: redis-data
        persistentVolumeClaim: 
          claimName: openebs1
